--- a/EjemploBaseDatos/app/src/main/AndroidManifest.xml
+++ b/EjemploBaseDatos/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EjemploBaseDatos">
+        <activity android:name=".EjemploBaseDatos"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
