--- a/EjemploBaseDatos/app/src/main/AndroidManifest.xml
+++ b/EjemploBaseDatos/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddCliente"></activity>
+        <activity android:name=".AddCliente" android:label="Nuevo cliente"></activity>
     </application>
 
 </manifest>
